# live-ai

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml
__MACOSX/: ._pro_patch_offtrack_unknownfix
apps/mobile/: index.html  package.json  tsconfig.json  vite.config.ts
apps/server/: package.json
apps/web/: index.html  package.json  vite.config.ts
docs/: USER_GUIDE.md  architecture.md  product_truth_one_pager.md
docs/context_pack/: MASTER_ALL_OUTPUTS.md
docs/operations/: enforcement.md  enterprise_policy_templates.md  integration_guide.md  native_mobile_ble_plan.md  (+1 more)
overlay-assistant/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
overlay-assistant/services/speaker/: .dockerignore  Dockerfile  README.md  pyproject.toml
overlay-assistant/services/speaker/src/live_ai_speaker/: __init__.py  __main__.py  audio.py  backend.py  embeddings.py  main.py  service.py  settings.py  store.py
overlay-assistant/services/speaker/tests/: test_embeddings.py  test_service.py
overlay-assistant/services/stt/: .dockerignore  Dockerfile  README.md  pyproject.toml
overlay-assistant/services/stt/src/live_rhetoric_stt/: __init__.py  __main__.py  backend.py  main.py  service.py  settings.py
overlay-assistant/services/stt/tests/: test_api.py  test_backend.py  test_service.py
pro_patch_offtrack_unknownfix/: PATCH_NOTES.md
tools/: fix_server_up.sh  patch_offtopic_bridge_and_auth_v1.sh
(+254 files in other folders)
