[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "live-ai-speaker-verifier"
version = "0.1.0"
description = "Optional owner-voice verification fallback for mixed Live AI audio"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "torch>=2.4,<3",
  "transformers>=4.46,<6",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.hatch.build.targets.wheel]
packages = ["src/live_ai_speaker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
