[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "live-rhetoric-local-stt"
version = "0.1.0"
description = "Private OpenAI-compatible faster-whisper service for Live Rhetoric"
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.116,<1",
  "faster-whisper>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[tool.hatch.build.targets.wheel]
packages = ["src/live_rhetoric_stt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
]
